...
    <item>Brown</item>
    <item>Grey</item>
    <item>Blue grey</item>
  </string-array>

  <!-- Playground Fragment -->
  <string name="try_it">Try It!</string>
  <string name="rotating_title">Rotating PDF417</string>
  <string name="rotating_description">Display rotating PDF417 with toggle to QR Code</string>
  <string name="qr_title">QR Code</string>
  <string name="qr_description">Display static QR Code</string>
  <string name="static_pdf417_title">Static PDF417</string>
  <string name="static_pdf417_description">Display static PDF417 with toggle to QR Code</string>
...
